commit efd06525 prevents CSD windows from moving on plain Xorg
Summary
With current code from git master, moving client-side decorations on Xorg is not possible.
The issue is not reproducible on Wayland, not event with GDK_BACKEND=x11
.
Steps to reproduce
-
Run Xephyr
$ Xephyr -resizeable :12 &
-
Run mutter
$ DISPLAY=:12 GDK_BACKEND=x11 mutter --x11 &
- Start gtk3-demo
$ DISPLAY=:12 GDK_BACKEND=x11 gtk3-demo
- Try to move the
gtk3-demo
window by clicking on its hederbar
Actual results:
The window doesn't budge
Expected results:
The window moves around along with the pointer.
Additional data
This is a regression introduced by commit efd06525:
commit efd065259d34710b053471cd6f7d9bf58f16b8fb
Date: Sat Jun 6 13:04:32 2020 +0200
backends: Drop GDK device querying code from MetaCursorTracker
Clutter behavior is now equivalent to GDK's on X11, avoid poking to
GDK here.
Part-of: <https://gitlab.gnome.org/GNOME/mutter/-/merge_requests/1403>
Edited by Olivier Fourdan